# pybind_example

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  requirements.txt
src/: pybind_test.cpp
test/: test.py
